Oleg Domanov odomanov@yandex.ru reported that  tex4ht ended with an error when compiled biblatex files.
 There was a superfluous \relax in the file test.tmp, line 65 which
 seemed to cause the error. 

 This was true and was a result of recent upgrades to cope up with 
 biblatex.sty revisions. The problems were primarily due to not checking
 oolatex output when biblatex.4ht was revised.
 



git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@97 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/tex4ht-4ht.tex
+++ b/lit/tex4ht-4ht.tex
@@ -2733,24 +2733,39 @@ X\the\c@refsection --%:
 
 \let\blx@ifhyperref\@firstoftwo
 
-%\def\hyper:natanchorstart#1{\Link{}{#1}\EndLink}%  
-%\def\hyper:natlinkstart#1{\Link{#1}{}}%
-
-\def\hyper:natanchorstart#1{%
+% Oleg Domanov odomanov@yandex.ru reports:
+% tex4ht ends with an error when compiles biblatex files. I'm on
+% Windows, texlive 2012. I put here a minimal example and files
+% generated with the command latexmk test && mk4ht oolatex test
+%
+% https://www.dropbox.com/s/hn1zm40htqs13mf/t4htlink.zip
+%
+% There is a superfluous \relax in the file test.tmp, line 65 which
+% seems to cause the error. 
+%
+% Changes to cope with biblatex upgrade caused this problem. It is now
+% fixed. --CVR 2012/10/26
+% 
+\:CheckOption{ooffice}\if:Option
+ \def\hyper:natanchorstart#1{\Link{}{#1}\EndLink}%  
+ \def\hyper:natlinkstart#1{\Link{#1}{}}%
+\else
+ \def\hyper:natanchorstart#1{%
       \expandafter\ifx\csname QXpage.\thepage\endcsname\relax%
         \Tag{)Qpage.\thepage}{\file:id}%
         \HCode{<a id="page.\thepage"></a>}%
         \expandafter\xdef\csname QXpage.\thepage\endcsname{0}%
        \fi 
       \Link[\csname BibFileName\therefsection\endcsname]{}{#1}\EndLink}  
-\def\hyper:natanchorend{}
-\def\hyper:natlinkstart#1{%
+ \def\hyper:natlinkstart#1{%
       \expandafter\ifx\csname QXpage.\thepage\endcsname\relax%
         \Tag{)Qpage.\thepage}{\file:id}%
         \HCode{<a id="page.\thepage"></a>}%
         \expandafter\xdef\csname QXpage.\thepage\endcsname{0}%
        \fi 
       \Link[\csname BibFileName\therefsection\endcsname]{#1}{}}
+\fi
+\def\hyper:natanchorend{}
 \def\hyper:natlinkend{\EndLink}
 \def\writeCiteLink#1{\immediate\write\@mainaux{%
     \string\@namedef{#1.\thepage}{\FileName}}}
