remove set but unused variables
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@98 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,3 +1,8 @@
+2013-01-08  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	Backport from TeX Live.
+	* tex4ht-c.tex, tex4ht-t4ht.tex: Drop set but unused variables.
+
 2012-07-27  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	Adapt to W32TeX (backport from TeX Live).
