\citet command in combination with super and numbers option of natbib package was broken and reported by Stefan, see bug 178. A new function \ht@citet has been defined which will take charge in place of \citet when \NAT@super is true. Bug fixed.
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@99 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/tex4ht-4ht.tex
+++ b/lit/tex4ht-4ht.tex
@@ -5,6 +5,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % tex4ht-4ht.tex                                         %
 % Copyright (C) 1996--2009            Eitan M. Gurari    %
+%               2009-2013             TeX Users Group    %
 %                                                        %
 % This work may be distributed and/or modified under the %
 % conditions of the LaTeX Project Public License, either %
@@ -23278,6 +23279,7 @@ the `@' is not allowed in XML ids.
 \HRestore\@lbibitem
 \HRestore\@bibitem
 \ifNAT@super
+   |<natbib htcitet|>
    |<natbib numbers|>
 \else
   \def\hyper@natlinkstart#1{%
@@ -23371,7 +23373,15 @@ Section \ref{sec:Algorithms} presents
 \fi
 >>>
 
+This modification is needed since Stefan
+\Verb=<s.newslists@googlemail.com>= vide bug \# 178 reported that
+\Verb=\citet= didn't work in combination with \Verb=super= option of
+\Verb=natbib= package.
 
+\<natbib htcitet\><<<
+\def\citet{\@ifstar{\NAT@longnamestrue\ht@citet}%
+          {\NAT@longnamesfalse\ht@citet}}
+>>>
 
 
 \<natbib numbers\><<<
@@ -23380,12 +23390,13 @@ Section \ref{sec:Algorithms} presents
       \c@NAT@ctr}\EndLink \gdef\bib:anc{}}%
    \def\AnchorLabel{\bib:anc}}
 \def\nb:link#1{\Protect\Link{bibitem#1}{}#1\Protect\EndLink}
+\def\nb@link#1{\Protect\Link{bibitem#1}{}#1\Protect\EndLink}
 >>>
 
 
 \<natbib numbers\><<<
 \let\nat:lbibitem\@lbibitem
-\def\@lbibitem{
+\def\@lbibitem{%
   \ifx\hyper@natanchorstart\@gobble 
      \def\hyper@natanchorstart##1{\Link{}{bibitem\the
       \c@NAT@ctr}\EndLink}\fi
@@ -23394,9 +23405,28 @@ Section \ref{sec:Algorithms} presents
 >>>
 
 
-
 \<natbib numbers\><<<
 \catcode`\:|=12
+  \def\ht@citet#1{\def\NAT@num{-1}\let\NAT@last@yr\relax\let\NAT@nm\@empty
+     \let\@citea\@empty
+     \@for\@citeb:=#1\do{%  
+      \@ifundefined{b@\@citeb\@extra@b@citeb}% 
+       {{\reset@font\bfseries?}\NAT@citeundefined\PackageWarning{natbib}%
+         {Citation `\@citeb' on page \thepage \space undefined}%
+       }%
+       {\@citea\let\NAT@last@num\NAT@num\let\NAT@last@nm\NAT@nm
+        \NAT@parse{\@citeb}%
+        \ifNAT@longnames\@ifundefined{bv@\@citeb\@extra@b@citeb}{%
+          \let\NAT@name=\NAT@all@names
+          \global\@namedef{bv@\@citeb\@extra@b@citeb}{}}{}%
+        \fi
+        \ifNAT@full\let\NAT@nm\NAT@all@names\else
+         \let\NAT@nm\NAT@name
+        \fi
+        \NAT@nm}\Tg<sup>\nb@link{\NAT@num}\Tg</sup>
+        \def\@citea{\unskip\NAT@sep\penalty\@m\space}%
+       }%
+}
 \def\NAT@citexnum[#1][#2]#3{%
  \NAT@sort@cites{#3}%
  \let\@citea\@empty
