\nolinkurl \relax'ed in biblatex.4ht, if not, biblatex generated wrong and nested <a href="..."> ... </a> elements for eprint entries. Danny Baillie reported this problem. See: http://tug.org/pipermail/tex4ht/2013q1/000698.html
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@101 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/tex4ht-4ht.tex
+++ b/lit/tex4ht-4ht.tex
@@ -2685,9 +2685,9 @@ X\the\c@refsection --%:
  \fi
 }
 \NewConfigure{blx@unit}{2}
-
+%
    \else
-   \fi
+\fi
 
 >>>
 
@@ -2771,6 +2771,7 @@ X\the\c@refsection --%:
 \def\writeCiteLink#1{\immediate\write\@mainaux{%
     \string\@namedef{#1.\thepage}{\FileName}}}
 \let\blx@addpagesum\@gobbletwo
+\let\nolinkurl\relax
 >>>
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  
