Mar 18, 2013 at 9:28 PM, Matteo Gamboz <gamboz@medialab.sissa.it> wrote that starred equation caused an forgotten endgroup error, hence configuration for {equation*} added which was missing.
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@104 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/tex4ht-docbook.tex
+++ b/lit/tex4ht-docbook.tex
@@ -2,7 +2,7 @@
 % compile 3 times:     latex tex4ht-docbook   
 %                or  xhlatex tex4ht-docbook "html,3,sections+"
 %
-% Copyright (C) 2009-2010 TeX Users Group
+% Copyright (C) 2009-2013 TeX Users Group
 % Copyright (C) 2000-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
@@ -3008,10 +3008,26 @@ accent="true">&\#x0332;</\a:mathml mo></\a:mathml munder>}%
   {\ifvmode \IgnorePar\fi\EndP \HCode{<note role="equation"><para>}}
   {\ifvmode \IgnorePar\fi\EndP \HCode{</para></note></blockquote>}\par
    \ShowPar}
+
+% Mar 18, 2013 at 9:28 PM, Matteo Gamboz <gamboz@medialab.sissa.it>
+% wrote that starred equation caused an forgotten endgroup error, hence
+% the following fix. CVR Mar 22, 2013.
+
+\Configure{equation*}
+  {\ifvmode \IgnorePar\fi   \EndP
+   \HCode{<blockquote role="equation">}%
+   \Configure{gather}
+     {\HCode{<mtable\Hnewline
+         class="equation"><mtr><mtd>}\IgnorePar }
+     {\HCode{</mtd></mtr></mtable>}}
+     {}
+     {}
+     {}
+     {}
+  }
+  {\ifvmode \IgnorePar\fi\EndP \HCode{</blockquote>}\par
+   \ShowPar}
 >>>
-
-
-
 
 
 \<configure docbook-mml amsmath\><<<
