#include <kpathsea/config.h> first
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@106 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,3 +1,8 @@
+2013-07-02  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* tex4ht-c.tex, tex4ht-t4ht.tex: Always include system headers
+	after <kpathsea/config.h>.  (Backport from TeX Live.)
+
 2013-03-01  Radhakrishnan CV  <cvr@river-valley.org>
 
 	* tex4ht-ooffice.tex: \NoFonts ... \EndNoFonts added in
