multicol.4ht written afresh to bring in support for multicolumn layout in HTML output.
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@107 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/tex4ht-4ht.tex
+++ b/lit/tex4ht-4ht.tex
@@ -32701,15 +32701,122 @@ of  \''<a>' elements.
 >>>        \AddFile{9}{multicol}
 
 \<multicols config\><<<
-\def\multicols#1{\bgroup \par \col@number=1
-     \@ifnextchar[\mult@cols{\mult@cols[]}}
-\def\mult@@cols#1[#2]{\ignorespaces}
+\def\mcolnum{1}
+\def\multicols#1{%
+      \bgroup \par \col@number=#1
+      \def\mcolnum{#1}
+      \@ifnextchar[{\mult@cols}{\mult@cols[]}%]
+   }
+
+\def\mult@@cols#1[#2]{#1\ignorespaces\mult:cols}
 \def\endmulticols{\egroup\par }
+
 \def\columnbreak{\a:columnbreak}
 \NewConfigure{columnbreak}{1}
+\Configure{columnbreak}{auto}
+
+%  break-before, break-after, break-inside
+%-----------------------------------------
+% auto  always  avoid  left  right  page  column  avoid-page 
+% avoid-column
+
+\def\columngap{\a:columngap}
+\NewConfigure{columngap}{1}
+\Configure{columngap}{\the\columnsep}
+
+% dimen  normal (1em)
+
+\def\columnrulewidth{\a:columnrulewidth}
+\NewConfigure{columnrulewidth}{1}
+\Configure{columnrulewidth}{\the\columnseprule}
+
+% thin  medium  thick  dimen
+
+\def\columnrulecolor{\a:columnrulecolor}
+\NewConfigure{columnrulecolor}{1}
+\Configure{columnrulecolor}{\#555;}
+
+% legal color
+
+\def\columnrulestyle{\a:columnrulestyle}
+\NewConfigure{columnrulestyle}{1}
+\Configure{columnrulestyle}{outset}
+
+% none
+%     No border. 
+% *hidden
+%     Same as 'none', but in the collapsing border model, also inhibits
+%     any other border (see the section on border conflicts).  
+% dotted
+%     The border is a series of dots. 
+% dashed
+%     The border is a series of short line segments. 
+% solid
+%     The border is a single line segment. 
+% double
+%     The border is two solid lines. The sum of the two lines and the
+%     space between them equals the value of 'border-width'.  
+% groove
+%     The border looks as though it were carved into the canvas. 
+% ridge
+%     The opposite of 'groove': the border looks as though it were
+%     coming out of the canvas.  
+% *inset
+%     In the separated borders model, the border makes the entire box
+%     look as though it were embedded in the canvas. In the collapsing
+%     border model, drawn the same as 'ridge'.  
+% *outset
+%     In the separated borders model, the border makes the entire box
+%     look as though it were coming out of the canvas. In the collapsing
+%     border model, drawn the same as 'groove'.  
+
+\def\columnspan{\a:columnspan}
+\NewConfigure{columnspan}{1}
+\Configure{columnspan}{none}
+
+% none  all
+
+\def\columnfill{\a:columnfill}
+\NewConfigure{columnfill}{1}
+\Configure{columnfill}{balance}
+
+% auto  balance
+
+\NewConfigure{multicols}{1}
+\Configure{multicols}{columns}
+
+\def\:wr:mcol:css{%
+        \Css{.\a:multicols-\mcolnum\space p:first-child { margin-top: 0em; }}%
+        \Css{.\a:multicols-\mcolnum {%
+           -moz-column-count:\mcolnum; 
+           -webkit-column-count:\mcolnum;
+           column-count:\mcolnum;
+           -moz-column-gap: \a:columngap;
+           -webkit-column-gap: \a:columngap; 
+           column-gap: \a:columngap;
+           -moz-column-rule-width: \a:columnrulewidth; 
+           -webkit-column-rule-width: \a:columnrulewidth; 
+           column-rule-rule-width: \a:columnrulewidth;
+           -moz-column-rule-color: \a:columnrulecolor; 
+           -webkit-column-rule-color: \a:columnrulecolor; 
+           column-rule-color: \a:columnrulecolor;
+           -moz-column-rule-style: \a:columnrulestyle; 
+           -webkit-column-rule-style: \a:columnrulestyle; 
+           column-rule-style: \a:columnrulestyle;
+           -moz-column-fill: \a:columnfill; 
+           -webkit-column-fill: \a:columnfill; 
+           column-fill: \a:columnfill;
+           }%
+        }%
+}
+\def\mult:cols{\IgnorePar\EndP%
+        \HCode{<div class="\a:multicols-\mcolnum">}%
+        \expandafter\ifx\csname .\a:multicols-\mcolnum\endcsname\relax%
+        \:wr:mcol:css
+        \expandafter\gdef\csname .\a:multicols-\mcolnum\endcsname{1}%
+        \fi\ShowPar\par}
+\append:def\endmulticols{\EndP\HCode{</div>}} 
 >>>
-
-
 
 
 %-------------------------------- Baby osudeG.sty -------------
