--- a/lit/tex4ht-4ht.tex
+++ b/lit/tex4ht-4ht.tex
@@ -1,32 +1,29 @@
-% http://www.tug.org/texlive/Contents/live/texmf-dist/doc/xetex/XeTeX-notes.pdf
-
 % tex tex4ht-4ht   or   ht tex tex4ht-4ht
 %
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% tex4ht-4ht.tex                                         %
-% Copyright (C) 1996--2009            Eitan M. Gurari    %
-%               2009-2013             TeX Users Group    %
-%                                                        %
-% This work may be distributed and/or modified under the %
-% conditions of the LaTeX Project Public License, either %
-% version 1.3c of this license or (at your option) any   %
-% later version. The latest version of this license is   %
-% in                                                     %
-%   http://www.latex-project.org/lppl.txt                %
-% and version 1.3c or later is part of all distributions %
-% of LaTeX version 2005/12/01 or later.                  %
-%                                                        %
-% This work has the LPPL maintenance status "maintained".%
-%                                                        %
-% This Current Maintainer of this work                   %
-% is TeX4ht Projecct Team.                               %
-%                                                        %
-% If you modify this file your changing the signature    %
-% in \message{(signature)} below will be appreciated.    %
-%                                                        %
-%                                        tex4ht@tug.org  %
-%                             http://www.tug.org/tex4ht  %
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%   
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% tex4ht-4ht.tex                                         
+% Copyright (C) 2009-2013             TeX Users Group    
+%               1996-2009             Eitan M. Gurari    
+%                                                        
+% This work may be distributed and/or modified under the 
+% conditions of the LaTeX Project Public License, either 
+% version 1.3c of this license or (at your option) any   
+% later version. The latest version of this license is in
+%   http://www.latex-project.org/lppl.txt                
+% and version 1.3c or later is part of all distributions 
+% of LaTeX version 2005/12/01 or later.                  
+%                                                        
+% This work has the LPPL maintenance status "maintained".
+%                                                        
+% The Current Maintainer of this work                    
+% is TeX4ht Project Team.                                
+%                                                        
+% If you modify this file your changing the signature    
+% in \message{(signature)} below will be appreciated.    
+%                                                        
+%                                        tex4ht@tug.org  
+%                             http://www.tug.org/tex4ht  
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \message{(<signature>)}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%   
@@ -114,7 +111,6 @@
                 \input tex4ht.sty
                 \Preamble{html,th4,family,sections+,xhtml,next}
                 \Configure{@HEAD}{\HCode{<link rev="made" 
-%                      href="mailto:gurari@cse.ohio-state.edu" />}}
                       href="mailto:tex4ht@tug.org" />}}
 %                \input MyTeX4ht.sty {}%
                 \input ProTex.sty
