--- a/lit/tex4ht-misc.tex
+++ b/lit/tex4ht-misc.tex
@@ -1,24 +1,21 @@
-% http://www.tug.org/texlive/Contents/live/texmf-dist/doc/xetex/XeTeX-notes.pdf
-
 % tex tex4ht-misc   or   ht tex tex4ht-misc
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % tex4ht-misc.tex                                       
-% Copyright (C) 2012 TeX Users Group
+% Copyright (C) 2012-2013 TeX Users Group
 %                                                       
 % This work may be distributed and/or modified under the
 % conditions of the LaTeX Project Public License, either
 % version 1.3c of this license or (at your option) any  
-% later version. The latest version of this license is  
-% in                                                    
+% later version. The latest version of this license is in
 %   http://www.latex-project.org/lppl.txt               
 % and version 1.3c or later is part of all distributions
 % of LaTeX version 2005/12/01 or later.                 
 %                                                       
-% This work has the LPPL maintenance status "maintained"
+% This work has the LPPL maintenance status "maintained".
 %                                                       
-% This Current Maintainer of this work                  
-% is TeX4ht Projecct Team.                              
+% The Current Maintainer of this work                  
+% is TeX4ht Project Team.                              
 %                                                       
 % If you modify this file your changing the signature   
 % in \message{(signature)} below will be appreciated.   
@@ -113,7 +110,6 @@
                 \input tex4ht.sty
                 \Preamble{html,th4,family,sections+,xhtml,next}
                 \Configure{@HEAD}{\HCode{<link rev="made" 
-%                      href="mailto:gurari@cse.ohio-state.edu" />}}
                       href="mailto:tex4ht@tug.org" />}}
 %                \input MyTeX4ht.sty {}%
                 \input ProTex.sty
