vcss and xmllint stubs, more copyright/doc tweaks
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@112 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/TODO
+++ b/TODO
@@ -9,6 +9,7 @@ This file is public domain.  Originally written 2013, Karl Berry.
 - update to current year
 - current year first
 - "This Current Maintainer" -> "The Current Maintainer"
+   "is the TeX4ht Project <http://tug.org/tex4ht>."
 - eliminate multi-%'s, shorten lines
 
 * http://www.tug.org/texlive/Contents/live/texmf-dist/doc/xetex/XeTeX-notes.pdf
