--- a/lit/tex4ht-cpright.tex
+++ b/lit/tex4ht-cpright.tex
@@ -21,4 +21,4 @@
 |<TeX4ht copyright|>\immediate\write-1{version |version}
 >>>
 
-% Two additional copies in tex4ht-mktex.tex.
+% Two additional copies in tex4ht-mkht.tex.
