conditionalize topmatter to make all blog articles into chapters
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@115 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/doc/tex4ht-configure1.tex
+++ b/doc/tex4ht-configure1.tex
@@ -1,6 +1,17 @@
 % $Id$
+% Copyright 2009-2013 CV Radhakrishnan.
+% Released under LPPLv1.3+.
+% 
+% TeX4ht's \Configure command, part 1.
 
+\ifx\texhtstandalonedoc1
+\documentclass[a4paper]{article}
+\usepackage{xspace,graphicx,blog}
+\begin{document}
+\section{Introduction}
+\else
 \chapter{\TeX4ht \textbackslash{}Configure}
+\fi
 
 The \Verb=\Configure= command is the most powerful user command in
 \texht system.  It helps to add various kinds of hooks to insert
@@ -697,3 +708,5 @@ The content to be displayed in the pointers.
      {\ifvmode \IgnorePar\fi \EndP
       \HCode{</div>}}
 \end{verbatim}
+
+\ifx\texhtstandalonedoc1 \end{document}\fi
